third_party/blink/renderer/core/fetch/body.cc
@@ -155,8 +155,11 @@ ScriptPromise Body::arrayBuffer(ScriptState* script_state,
     BodyBuffer()->StartLoading(FetchDataLoader::CreateLoaderAsArrayBuffer(),
                                new BodyArrayBufferConsumer(resolver),
                                exception_state);
-    if (exception_state.HadException())
+    if (exception_state.HadException()) {
+      // Need to resolve the ScriptPromiseResolver to avoid a DCHECK().
+      resolver->Resolve();
       return ScriptPromise();
+    }
   } else {
     resolver->Resolve(DOMArrayBuffer::Create(0u, 1));
   }
@@ -179,8 +182,11 @@ ScriptPromise Body::blob(ScriptState* script_state,
     BodyBuffer()->StartLoading(
         FetchDataLoader::CreateLoaderAsBlobHandle(MimeType()),
         new BodyBlobConsumer(resolver), exception_state);
-    if (exception_state.HadException())
+    if (exception_state.HadException()) {
+      // Need to resolve the ScriptPromiseResolver to avoid a DCHECK().
+      resolver->Resolve();
       return ScriptPromise();
+    }
   } else {
     std::unique_ptr<BlobData> blob_data = BlobData::Create();
     blob_data->SetContentType(MimeType());
@@ -212,8 +218,11 @@ ScriptPromise Body::formData(ScriptState* script_state,
       body_buffer->StartLoading(
           FetchDataLoader::CreateLoaderAsFormData(boundary),
           new BodyFormDataConsumer(resolver), exception_state);
-      if (exception_state.HadException())
+      if (exception_state.HadException()) {
+        // Need to resolve the ScriptPromiseResolver to avoid a DCHECK().
+        resolver->Resolve();
         return ScriptPromise();
+      }
       return promise;
     }
   } else if (parsedType == "application/x-www-form-urlencoded") {
@@ -221,8 +230,11 @@ ScriptPromise Body::formData(ScriptState* script_state,
       BodyBuffer()->StartLoading(FetchDataLoader::CreateLoaderAsString(),
                                  new BodyFormDataConsumer(resolver),
                                  exception_state);
-      if (exception_state.HadException())
+      if (exception_state.HadException()) {
+        // Need to resolve the ScriptPromiseResolver to avoid a DCHECK().
+        resolver->Resolve();
         return ScriptPromise();
+      }
     } else {
       resolver->Resolve(FormData::Create());
     }
@@ -232,8 +244,11 @@ ScriptPromise Body::formData(ScriptState* script_state,
       BodyBuffer()->StartLoading(FetchDataLoader::CreateLoaderAsFailure(),
                                  new BodyFormDataConsumer(resolver),
                                  exception_state);
-      if (exception_state.HadException())
+      if (exception_state.HadException()) {
+        // Need to resolve the ScriptPromiseResolver to avoid a DCHECK().
+        resolver->Resolve();
         return ScriptPromise();
+      }
       return promise;
     }
   }
@@ -258,8 +273,11 @@ ScriptPromise Body::json(ScriptState* script_state,
   if (BodyBuffer()) {
     BodyBuffer()->StartLoading(FetchDataLoader::CreateLoaderAsString(),
                                new BodyJsonConsumer(resolver), exception_state);
-    if (exception_state.HadException())
+    if (exception_state.HadException()) {
+      // Need to resolve the ScriptPromiseResolver to avoid a DCHECK().
+      resolver->Resolve();
       return ScriptPromise();
+    }
   } else {
     resolver->Reject(V8ThrowException::CreateSyntaxError(
         script_state->GetIsolate(), "Unexpected end of input"));
@@ -282,8 +300,11 @@ ScriptPromise Body::text(ScriptState* script_state,
   if (BodyBuffer()) {
     BodyBuffer()->StartLoading(FetchDataLoader::CreateLoaderAsString(),
                                new BodyTextConsumer(resolver), exception_state);
-    if (exception_state.HadException())
+    if (exception_state.HadException()) {
+      // Need to resolve the ScriptPromiseResolver to avoid a DCHECK().
+      resolver->Resolve();
       return ScriptPromise();
+    }
   } else {
     resolver->Resolve(String());
   }
